src/test/deca/syntax/valid/test_dir/added/lexer/print.deca
// Description:
//    test of different print typos
//
// Results:
//    test_lex --> no error, return 12 tokens
//
// History:
//    created on 04/01/2022

print()
println
printx
printlnx()
print("Hello world !")