src/test/deca/syntax/invalid/test_dir/added/lexer/printlnxy.deca
// Description:
//    Mais cela fonctionnne ca non ?
//
// Results:
//    test_lex -->
//
// History:
//    created on 04/01/2022

printlnxy("Oupsssi !")

